--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elite Dangerous Discovery Announcer</title>
+    <title>Elite Danagerous: Discovery Logbook</title>
   </head>
   <body>
     <div id="app"></div>
