--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-full bg-white">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elite Danagerous: Discovery Logbook</title>
   </head>
-  <body>
+  <body class="h-full">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
