--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elite Danagerous: Discovery Insights</title>
+    <title>Elite Danagerous: Deep Space Insights</title>
   </head>
   <body class="h-full">
     <div id="app"></div>
